--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         padding: 0;
         box-sizing: border-box;
       }
-      
+
       ul li {
         margin-top: 8px;
       }
@@ -21,7 +21,7 @@
     <h1>21 dias de Desafio</h1>
     <ul>
       <li>
-        <a href="/day 1 - first commit/">Day #1 - Repositório</a>
+        <a href="/day 1 - first commit/readme.md">Day #1 - Repositório</a>
       </li>
       <li>
         <a href="/day 2 - Hello World/index.html">Day #2 - Hello World</a>
