--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>21 dias de Desafio</h1>
     <ul>
       <li>
-        <a href="/day 1 - first commit/readme.md">Day #1 - Repositório</a>
+        <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day%201%20-%20first%20commit" target="_blank">Day #1 - Repositório</a>
       </li>
       <li>
         <a href="/day 2 - Hello World/index.html">Day #2 - Hello World</a>
