--- a/day 2 - Hello World/index.html
+++ b/day 2 - Hello World/index.html
@@ -11,12 +11,16 @@
       href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400;500;600;700&family=Poppins:wght@300;400;500;700;900&family=Press+Start+2P&family=Silkscreen&display=swap"
       rel="stylesheet"
     />
+
+    <link href="http://fonts.cdnfonts.com/css/anonymous-pro" rel="stylesheet">
+                
+                
     <title>Desafio 02 - Hello World</title>
   </head>
   <body>
     <div class="wrapper">
       <div class="type-effect">
-        <h1>Hello World ()</h1>
+        <h1>Hello World ().</h1>
       </div>
     </div>
   </body>
