refac: project index

--- a/index.html
+++ b/index.html
@@ -4,28 +4,37 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>21 Dias de Desafio</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      ul li {
-        margin-top: 8px;
-      }
-    </style>
   </head>
   <body>
-    <h1>21 dias de Desafio</h1>
-    <ul>
-      <li>
-        <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day%201%20-%20first%20commit" target="_blank">Day #1 - Repositório</a>
-      </li>
-      <li>
-        <a href="/day 2 - Hello World/index.html">Day #2 - Hello World</a>
-      </li>
-    </ul>
+    <div class="wrapper">
+      <div class="header">
+        <h1>
+          21 dias de Código <br />
+          by Rocketseat
+        </h1>
+      </div>
+      <div class="list-container">
+        <ul>
+          <li>
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day%201%20-%20first%20commit"
+              target="_blank"
+              >Day #1 - Repositório</a
+            >
+          </li>
+          <li>
+            <a href="/day 2 - Hello World/index.html">Day #2 - Hello World</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
