--- a/day 2 - Hello World/index.html
+++ b/day 2 - Hello World/index.html
@@ -8,13 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Audiowide&family=Dancing+Script:wght@400;500;600;700&family=Poppins:wght@300;400;500;700;900&family=Press+Start+2P&family=Silkscreen&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-
-    <link href="http://fonts.cdnfonts.com/css/anonymous-pro" rel="stylesheet">
-                
-                
     <title>Desafio 02 - Hello World</title>
   </head>
   <body>
