--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul>
           <li>
             <a
-              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/day%201%20-%20first%20commit"
+              href="#"
               target="_blank"
               >Day #1 - Repositório</a
             >
