refac: removing space from path url

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             >
           </li>
           <li>
-            <a href="/day 2 - Hello World/index.html">Day #2 - Hello World</a>
+            <a href="/day-2-Hello-World/index.html">Day #2 - Hello World</a>
           </li>
         </ul>
       </div>
