including day 3 to list

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <li>
             <a href="/day-2-Hello-World/index.html">Day #2 - Hello World</a>
           </li>
+          <li>
+            <a href="/day-3-animated-button/index.html">Day #3 - Animated Button</a>
+          </li>
         </ul>
       </div>
     </div>
