refac: list item day 4

--- a/index.html
+++ b/index.html
@@ -24,17 +24,18 @@
       <div class="list-container">
         <ul>
           <li>
-            <a
-              href="#"
-              target="_blank"
-              >Day #1 - Repositório</a
-            >
+            <a href="#" target="_blank">Day #1 - Repositório</a>
           </li>
           <li>
             <a href="/day-2-Hello-World/index.html">Day #2 - Hello World</a>
           </li>
           <li>
-            <a href="/day-3-animated-button/index.html">Day #3 - Animated Button</a>
+            <a href="/day-3-animated-button/index.html"
+              >Day #3 - Animated Button</a
+            >
+          </li>
+          <li>
+            <a href="/day-4-calculator/index.html">Day #4 - Calculator</a>
           </li>
         </ul>
       </div>
