--- a/day-4-calculator/index.html
+++ b/day-4-calculator/index.html
@@ -13,6 +13,8 @@
     />
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css" />
+    <!-- Script -->
+    <script defer src="calculator.js"></script>
     <title>Desafio 4 - Calculadora</title>
   </head>
   <body>
@@ -48,7 +50,5 @@
         <button type="button" class="equal-sign operator" value="=">=</button>
       </div>
     </div>
-
-    <script src="calculator.js"></script>
   </body>
 </html>
