feat: day 5 link

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
           <li>
             <a href="/day-4-calculator/index.html">Day #4 - Calculator</a>
           </li>
+          <li>
+            <a href="/day-5-404/index.html">Day #5 - 404 error</a>
+          </li>
         </ul>
       </div>
     </div>
