fix: correct return url

--- a/day-5-404/index.html
+++ b/day-5-404/index.html
@@ -22,7 +22,7 @@
         <h2 class="skewed subtitle">Not Found</h2>
         <h2 class="skewed subtitle link">
           <i class="ph-arrow-u-down-left-thin"></i
-          ><a href="http://127.0.0.1:5500/"> Return </a>
+          ><a href="https://21-dias-de-codigo-rocketseat.vercel.app/"> Return </a>
         </h2>
       </div>
       <!-- Porra do SVG -->
