--- a/day-6-card-glass-effect/index.html
+++ b/day-6-card-glass-effect/index.html
@@ -14,7 +14,7 @@
     <title>Day 6 - Glass Effect</title>
   </head>
   <body>
-    <div class="glass-container">
+    <div class="glass-container" tabindex="0">
       <h2 class="content">Welcome</h2>
       <img
         class="avatar"
@@ -24,7 +24,7 @@
       <div class="content">
         <p>Romana Mauller</p>
         <button class="btn-login">Login</button>
-        <div class="message"></div>
+        <div class="message" tabindex="0"></div>
       </div>
     </div>
     <script>
