--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
           <li>
             <a href="/day-5-404/index.html">Day #5 - 404 error</a>
           </li>
+          <li>
+            <a href="/day-6-card-glass-effect/index.html">Day #6 - Glass Card Effect</a>
+          </li>
         </ul>
       </div>
     </div>
