feat: added link to day #7

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
             <a href="/day-5-404/index.html">Day #5 - 404 error</a>
           </li>
           <li>
-            <a href="/day-6-card-glass-effect/index.html">Day #6 - Glass Card Effect</a>
+            <a href="/day-6-card-glass-effect/index.html"
+              >Day #6 - Glass Card Effect</a
+            >
+          </li>
+          <li>
+            <a href="/day-7-timer-counter/index.html">Day #7 - Timer</a>
           </li>
         </ul>
       </div>
