--- a/day-7-timer-counter/index.html
+++ b/day-7-timer-counter/index.html
@@ -11,7 +11,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/phosphor-icons"></script>
     <script defer src="main.js"></script>
+
     <title>Day 7 - Timer Counter</title>
   </head>
   <body>
@@ -21,6 +23,10 @@
         #21diasdecodigo
       </h1>
       <div id="countdown"></div>
+      <div class="goBack">
+        <i class="ph-arrow-u-down-left-bold"></i>
+        <a href="https://21-dias-de-codigo-rocketseat.vercel.app/">Go Back </a>
+      </div>
     </section>
   </body>
 </html>
