feat: add go back button

--- a/day-8-theme-switcher/index.html
+++ b/day-8-theme-switcher/index.html
@@ -10,6 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Gruppo&family=Martel:wght@200;300;400&family=Permanent+Marker&family=Poppins:wght@300;400;500;700;900&family=Staatliches&family=Unica+One&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/phosphor-icons"></script>
+
     <link rel="stylesheet" href="styles.css" />
     <title>Day 8 - Theme Switcher</title>
   </head>
@@ -23,6 +25,10 @@
         <input id="toggle" type="checkbox" />
         <span class="slider round"></span>
       </label>
+      <div class="goBack">
+        <i class="ph-arrow-u-down-left-bold"></i>
+        <a href="https://21-dias-de-codigo-rocketseat.vercel.app/">Go Back </a>
+      </div>
     </div>
     <script src="main.js"></script>
   </body>
