--- a/day-8-theme-switcher/index.html
+++ b/day-8-theme-switcher/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Gruppo&family=Martel:wght@200;300;400&family=Permanent+Marker&family=Poppins:wght@300;400;500;700;900&family=Staatliches&family=Unica+One&display=swap"
       rel="stylesheet"
     />
+    <!-- Icons -->
     <script src="https://unpkg.com/phosphor-icons"></script>
-
+    <!-- CSS -->
     <link rel="stylesheet" href="styles.css" />
     <title>Day 8 - Theme Switcher</title>
   </head>
