feat: add day 8 to menu

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
           <li>
             <a href="/day-7-timer-counter/index.html">Day #7 - Timer</a>
           </li>
+          <li>
+            <a href="/day-8-theme-switcher/index.html"
+              >Day #8 - Theme Switcher</a
+            >
+          </li>
         </ul>
       </div>
     </div>
