--- a/day-9-animated-progressbar/index.html
+++ b/day-9-animated-progressbar/index.html
@@ -1,12 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day 9 - Animated Progress Bar</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <title>Day 9 - Animated Progress Bar</title>
+    <style>
+      /* * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      } */
+
+      body {
+        max-width: 1440px;
+        margin-inline: auto;
+        margin-top: 20%;
+
+        background-color: #352d59;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .meter {
+        width: 50%;
+        height: 20px;
+
+        padding: 10px;
+        border-radius: 25px;
+
+        background: #555;
+
+        box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.5);
+      }
+
+      .meter > span {
+        position: relative;
+        display: inline-block;
+
+        text-align: right;
+
+        height: 100%;
+
+        /* border-top-right-radius: 8px;
+        border-bottom-right-radius: 8px;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px; */
+        border-radius: 20px;
+
+        background: rgb(43, 194, 83);
+        background-image: linear-gradient(
+          center-bottom,
+          rgb(43, 194, 83) 83%,
+          rgb(84, 240, 83) 69%
+        );
+
+        box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.5),
+          inset 0 -2px 6px rgba(0, 0, 0, 0.5);
+        overflow: hidden;
+      }
+
+      #clickBtn {
+        width: 160px;
+        margin-top: 16px;
+        padding: 8px;
+        border-radius: 25px;
+        border: none;
+        box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+      }
+
+      /* @keyframes move {
+        0% {
+          background-position: 0 0;
+        }
+        100% {
+          background-position: 50px 50px;
+        }
+      } */
+    </style>
+  </head>
+  <body>
+
+    <div class="meter animate">
+      <span id="barra" style="width: 0%"></span>
+    </div>
+    <button id="clickBtn">Start</button>
+
+    <script>
+      let btn = document.querySelector('#clickBtn')
+      btn.addEventListener('click', move)
+
+      function move() {
+        
+        let barra = document.querySelector('#barra')
+        let width = 0
+        let id = setInterval(frame, 48)
+
+        function frame() {
+          if (width >= 100) {
+            clearInterval(id)
+            btn.style.opacity = '1'            
+          } else {
+            width++
+            barra.style.width = width + '%'
+            barra.innerHTML = width * 1 + '%'
+            btn.style.opacity = '0'
+          }
+        }
+      }
+    </script>
+  </body>
 </html>
