feat: added day 9 to menu

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
               >Day #8 - Theme Switcher</a
             >
           </li>
+          <li>
+            <a href="/day-9-animated-progressbar/index.html"
+              >Day #9 - Animated Progress Bar</a
+            >
+          </li>
         </ul>
       </div>
     </div>
