--- a/day-10-particleJS/index.html
+++ b/day-10-particleJS/index.html
@@ -16,7 +16,7 @@
       <span class="js-count-particles">--</span> particles
     </div> -->
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- stats.js lib -->
     <!-- <script src="http://threejs.org/examples/js/libs/stats.min.js"></script> -->
   </body>
