feat: added day 10 to list

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
               >Day #9 - Animated Progress Bar</a
             >
           </li>
+          <li>
+            <a href="/day-10-particleJS/index.html"
+              >Day #10 - Particle JS</a
+            >
+          </li>
         </ul>
       </div>
     </div>
