refac: inputs refac

--- a/day-11-login-form/index.html
+++ b/day-11-login-form/index.html
@@ -25,17 +25,18 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="rectangle"></div>
       <!-- Form -->
       <div class="login-container">
         <h1>Welcome Back</h1>
         <form class="login--form" action="">
           <label for="userName"
             >Username:
-            <input type="text" placeholder="Type your username" />
+            <input type="text" placeholder="Type your username" required />
           </label>
           <label for="password"
             >Password:
-            <input type="text" />
+            <input type="password" placeholder="Type your password" required />
           </label>
           <button>Login</button>
         </form>
