feat: added day 11 to menu

--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
               >Day #10 - Particle JS</a
             >
           </li>
+          <li>
+            <a href="/day-11-login-form/index.html"
+              >Day #11 - Login Layout</a
+            >
+          </li>
         </ul>
       </div>
     </div>
