update: gallery markup

--- a/day-12-image-gallery/index.html
+++ b/day-12-image-gallery/index.html
@@ -1,12 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day 12 - Image Galery</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Day 12 - Image Galery</title>
+  </head>
+  <body>
+    <h1 class="page-title">Day 12 - Gallery</h1>
+    <div class="gallery">
+      <!-- Item -->
+      <div class="card">
+        <!-- Img -->
+        <img src="images/house-of-the-dragon-rhaenyra-poster.webp" alt="" />
+        <!-- Content Info -->
+        <div class="content">
+          <h2>Princess</h2>
+          <h3 class="text-animation"><em>Rhaenyra Targaryen</em></h3>
+          <p class="text-animation">
+            The king’s first-born child, she is of pure Valyrian blood, and she
+            is a dragonrider. Many would say that Rhaenyra was born with
+            everything… but she was not born a man.
+          </p>
+        </div>
+      </div>
+      <!-- Item -->
+      <div class="card">
+        <!-- Img -->
+        <img src="images/house-of-the-dragon-daemon-targaryen.webp" alt="" />
+        <!-- Content Info -->
+        <div class="content">
+          <h2>Prince</h2>
+          <h3 class="text-animation"><em>Daemon Targaryen</em></h3>
+          <p class="text-animation">
+            Younger brother to King Viserys and heir to the throne. A peerless
+            warrior and a dragonrider, Daemon possesses the true blood of the
+            dragon. But it is said that whenever a Targaryen is born, the gods
+            toss a coin in the air…
+          </p>
+        </div>
+      </div>
+      <!-- Item -->
+      <div class="card">
+        <!-- Img -->
+        <img src="images/house-of-the-dragon-viserys-targaryen.webp" alt="" />
+        <!-- Content Info -->
+        <div class="content">
+          <h2>King</h2>
+          <h3 class="text-animation"><em>Viserys Targaryen</em></h3>
+          <p class="text-animation">
+            Chosen by the lords of Westeros to succeed the Old King, Jaehaerys
+            Targaryen, at the Great Council at Harrenhal. A warm, kind, and
+            decent man, Viserys only wishes to carry forward his grandfather’s
+            legacy. But good men do not necessarily make for great kings.
+          </p>
+        </div>
+      </div>
+      <!-- Item -->
+      <div class="card">
+        <!-- Img -->
+        <img
+          src="images/house-of-the-dragon-alicent-hightower-poster.webp"
+          alt=""
+        />
+        <!-- Content Info -->
+        <div class="content">
+          <h2>Lady</h2>
+          <h3 class="text-animation"><em>Alicent Hightower</em></h3>
+          <p class="text-animation">
+            The daughter of Otto Hightower, the Hand of the King, and the most
+            comely woman in the Seven Kingdoms. She was raised in the Red Keep,
+            close to the king and his innermost circle; she possesses both a
+            courtly grace and a keen political acumen.
+          </p>
+        </div>
+      </div>
+      <!-- Item -->
+      <div class="card">
+        <!-- Img -->
+        <img
+          src="images/house-of-the-dragon-corlys-velaryon-poster.webp"
+          alt=""
+        />
+        <!-- Content Info -->
+        <div class="content">
+          <h2>“The Sea Snake”</h2>
+          <h3 class="text-animation"><em>Lord Corlys Velaryon</em></h3>
+          <p class="text-animation">
+            Lord of House Velaryon, a Valyrian bloodline as old as House
+            Targaryen. As “The Sea Snake,” the most famed nautical adventurer in
+            the history of Westeros, Lord Corlys built his house into a powerful
+            seat that is even richer than the Lannisters and that claims the
+            largest navy in the world.
+          </p>
+        </div>
+      </div>
+      <!-- Item -->
+      <div class="card">
+        <!-- Img -->
+        <img
+          src="images/house-of-the-dragon-rhaenys-targaryen-poster.webp"
+          alt=""
+        />
+        <!-- Content Info -->
+        <div class="content">
+          <h2>Princess</h2>
+          <h3 class="text-animation"><em>Rhaenys Targaryen</em></h3>
+          <p class="text-animation">
+            A dragonrider and wife to Lord Corlys Velaryon, “The Queen Who Never
+            Was” was passed over as heir to the throne at the Great Council
+            because the realm favored her cousin, Viserys, simply for being
+            male.
+          </p>
+        </div>
+      </div>
+      <!-- Item -->
+      <div class="card">
+        <!-- Img -->
+        <img src="images/house-of-the-dragon-criston-cole-poster.webp" alt="" />
+        <!-- Content Info -->
+        <div class="content">
+          <h2>Ser</h2>
+          <h3 class="text-animation"><em>Criston Cole</em></h3>
+          <p class="text-animation">
+            Of Dornish descent, the common-born son of the steward to the Lord
+            of Blackhaven. Cole has no claim to land or titles; all he has to
+            his name is his honor and his preternatural skill with a sword.
+          </p>
+        </div>
+      </div>
+      <!-- Item -->
+      <div class="card">
+        <!-- Img -->
+        <img src="images/house-of-the-dragon-otto-hightower.webp" alt="" />
+        <!-- Content Info -->
+        <div class="content">
+          <h2>The Hand of the King</h2>
+          <h3 class="text-animation"><em>Otto Hightower</em></h3>
+          <p class="text-animation">
+            The Hand of the King, Ser Otto loyally and faithfully serves both
+            his king and his realm. As the Hand sees it, the greatest threat to
+            the realm is the king’s brother, Daemon, and his position as heir to
+            the throne.
+          </p>
+        </div>
+      </div>
+      <!-- Item -->
+      <div class="card">
+        <!-- Img -->
+        <img src="images/house-of-the-dragon-mysaria-poster.webp" alt="" />
+        <!-- Content Info -->
+        <div class="content">
+          <h2>Lady Misery</h2>
+          <h3 class="text-animation"><em>Mysaria</em></h3>
+          <p class="text-animation">
+            Came to Westeros with nothing, sold more times than she can recall.
+            She could have wilted… but instead she rose to become the most
+            trusted — and most unlikely — ally of Prince Daemon Targaryen, the
+            heir to the throne.
+          </p>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
