update: added day 12 to menu

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
               >Day #11 - Login Layout</a
             >
           </li>
+          <li>
+            <a href="/day-12-image-gallery/index.html"
+              >Day #12 - Image Gallery</a
+            >
+          </li>
         </ul>
       </div>
     </div>
