--- a/day-12-image-gallery/index.html
+++ b/day-12-image-gallery/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aboreto&family=Poppins:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Icons -->
+    <script src="https://unpkg.com/phosphor-icons"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>Day 12 - Image Galery</title>
   </head>
   <body>
     <h1 class="page-title">Day 12 - Gallery</h1>
+    <div class="goBack">
+      <i class="ph-arrow-u-down-left-bold"></i>
+      <a href="https://21-dias-de-codigo-rocketseat.vercel.app/">Go Back </a>
+    </div>
     <div class="gallery">
       <!-- Item -->
       <div class="card">
