refac: correcting mobile reponsiveness

--- a/day-12-image-gallery/index.html
+++ b/day-12-image-gallery/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="gallery">
       <!-- Item -->
-      <div class="card">
+      <div class="card" tabindex="0">
         <!-- Img -->
         <img src="images/house-of-the-dragon-rhaenyra-poster.webp" alt="" />
         <!-- Content Info -->
@@ -38,7 +38,7 @@
         </div>
       </div>
       <!-- Item -->
-      <div class="card">
+      <div class="card" tabindex="0">
         <!-- Img -->
         <img src="images/house-of-the-dragon-daemon-targaryen.webp" alt="" />
         <!-- Content Info -->
@@ -54,7 +54,7 @@
         </div>
       </div>
       <!-- Item -->
-      <div class="card">
+      <div class="card" tabindex="0">
         <!-- Img -->
         <img src="images/house-of-the-dragon-viserys-targaryen.webp" alt="" />
         <!-- Content Info -->
@@ -70,7 +70,7 @@
         </div>
       </div>
       <!-- Item -->
-      <div class="card">
+      <div class="card" tabindex="0">
         <!-- Img -->
         <img
           src="images/house-of-the-dragon-alicent-hightower-poster.webp"
@@ -89,7 +89,7 @@
         </div>
       </div>
       <!-- Item -->
-      <div class="card">
+      <div class="card" tabindex="0">
         <!-- Img -->
         <img
           src="images/house-of-the-dragon-corlys-velaryon-poster.webp"
@@ -109,7 +109,7 @@
         </div>
       </div>
       <!-- Item -->
-      <div class="card">
+      <div class="card" tabindex="0">
         <!-- Img -->
         <img
           src="images/house-of-the-dragon-rhaenys-targaryen-poster.webp"
@@ -128,7 +128,7 @@
         </div>
       </div>
       <!-- Item -->
-      <div class="card">
+      <div class="card" tabindex="0">
         <!-- Img -->
         <img src="images/house-of-the-dragon-criston-cole-poster.webp" alt="" />
         <!-- Content Info -->
@@ -143,7 +143,7 @@
         </div>
       </div>
       <!-- Item -->
-      <div class="card">
+      <div class="card" tabindex="0">
         <!-- Img -->
         <img src="images/house-of-the-dragon-otto-hightower.webp" alt="" />
         <!-- Content Info -->
@@ -159,7 +159,7 @@
         </div>
       </div>
       <!-- Item -->
-      <div class="card">
+      <div class="card" tabindex="0">
         <!-- Img -->
         <img src="images/house-of-the-dragon-mysaria-poster.webp" alt="" />
         <!-- Content Info -->
