--- a/day-13-responsive-menu/index.html
+++ b/day-13-responsive-menu/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day 13 - Responsive Menu</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/phosphor-icons"></script>
+    <script defer src="main.js"></script>
+    <title>Day 13 - Responsive Menu</title>
+  </head>
+  <body>
+    <header>
+      <i class="ph-horse-light logo"></i>
+
+      <button class="mobile-toggle" aria-expanded="false">
+        <i id="menu-icon" class="ph-list-light"></i>
+      </button>
+
+      <nav class="nav">
+        <ul class="nav-menu" data-visible="false">
+          <li>Works</li>
+          <li>Services</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
