--- a/day-13-responsive-menu/index.html
+++ b/day-13-responsive-menu/index.html
@@ -10,6 +10,7 @@
     <title>Day 13 - Responsive Menu</title>
   </head>
   <body>
+    <!-- Header & Nav Menu -->
     <header>
       <i class="ph-horse-light logo"></i>
 
@@ -26,6 +27,7 @@
         </ul>
       </nav>
     </header>
+    <!-- Main Section Demonstration -->
     <section class="main">
       <div class="content">
         <h1>#21 days of Code</h1>
