--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
     <script src="https://unpkg.com/phosphor-icons"></script>
-    <script defer src="main.js"></script>
+    <script defer src="assets/js/main.js"></script>
     <title>Day 13 - Responsive Menu</title>
   </head>
   <body>
