refac: landing page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&family=Poppins:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/styles/style.css" />
     <script src="https://unpkg.com/phosphor-icons"></script>
     <script defer src="assets/js/main.js"></script>
-    <title>Day 13 - Responsive Menu</title>
+    <title>21 Days of Code</title>
   </head>
   <body>
     <header>
@@ -28,10 +32,10 @@
     </header>
     <section class="main">
       <div class="content">
-        <h1>#21 days of Code</h1>
+        <h1>21 days of Code</h1>
         <h2>
           This is the landing page of the #21diasdecodigo, an event promoted by
-          Rocketseat
+          Rocketseat.
         </h2>
       </div>
       <div class="cards">
@@ -53,7 +57,9 @@
           <h2>Hello World!</h2>
           <p>Create a custom 'Hello World' page</p>
           <div class="footer-card">
-            <a href="projects/day-2-Hello-World/index.html" target="_blank">Deploy</a>
+            <a href="projects/day-2-Hello-World/index.html" target="_blank"
+              >Deploy</a
+            >
             <a
               href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-2-Hello-World"
               target="_blank"
@@ -66,8 +72,14 @@
           <h2>Animated!</h2>
           <p>Create an animated button</p>
           <div class="footer-card">
-            <a href="projects/day-3-animated-button/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-3-animated-button/" target="_blank">Repo</a>
+            <a href="projects/day-3-animated-button/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-3-animated-button/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
@@ -75,8 +87,14 @@
           <h2>Calculate!</h2>
           <p>Build a calculator</p>
           <div class="footer-card">
-            <a href="projects/day-4-calculator/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-4-calculator/" target="_blank">Repo</a>
+            <a href="projects/day-4-calculator/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-4-calculator/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
@@ -85,7 +103,11 @@
           <p>Custom 404 "Not Found" page</p>
           <div class="footer-card">
             <a href="projects/day-5-404/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-5-404/" target="_blank">Repo</a>
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-5-404/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
@@ -94,8 +116,16 @@
 
           <p>Create a card with glass effect</p>
           <div class="footer-card">
-            <a href="projects/day-6-card-glass-effect/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-6-card-glass-effect/" target="_blank">Repo</a>
+            <a
+              href="projects/day-6-card-glass-effect/index.html"
+              target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-6-card-glass-effect/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
@@ -103,8 +133,14 @@
           <h2>Counter!</h2>
           <p>Develop a timer counter</p>
           <div class="footer-card">
-            <a href="projects/day-7-timer-counter/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-7-timer-counter/" target="_blank">Repo</a>
+            <a href="projects/day-7-timer-counter/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-7-timer-counter/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <!-- Week #2 -->
@@ -113,8 +149,14 @@
           <h2>Let there be 'Night'!</h2>
           <p>Create a toggle dark mode theme</p>
           <div class="footer-card">
-            <a href="projects/day-8-theme-switcher/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-8-theme-switcher/" target="_blank">Repo</a>
+            <a href="projects/day-8-theme-switcher/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-8-theme-switcher/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
@@ -122,8 +164,16 @@
           <h2>Loading...</h2>
           <p>Create a loading animation</p>
           <div class="footer-card">
-            <a href="projects/day-9-animated-progressbar/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-9-animated-progressbar/" target="_blank">Repo</a>
+            <a
+              href="projects/day-9-animated-progressbar/index.html"
+              target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-9-animated-progressbar/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
@@ -131,8 +181,14 @@
           <h2>Particles !!!</h2>
           <p>Use the lib ParticleJS and build something interesting</p>
           <div class="footer-card">
-            <a href="projects/day-10-particleJS/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-10-particleJS/" target="_blank">Repo</a>
+            <a href="projects/day-10-particleJS/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-10-particleJS/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
@@ -140,8 +196,14 @@
           <h2>Welcome User</h2>
           <p>Build a login page layout</p>
           <div class="footer-card">
-            <a href="projects/day-11-login-form/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-11-login-form/" target="_blank">Repo</a>
+            <a href="projects/day-11-login-form/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-11-login-form/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
@@ -149,8 +211,14 @@
           <h2>Art Gallery</h2>
           <p>Build an image gallery</p>
           <div class="footer-card">
-            <a href="projects/day-12-image-gallery/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-12-image-gallery/" target="_blank">Repo</a>
+            <a href="projects/day-12-image-gallery/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-12-image-gallery/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
@@ -158,8 +226,14 @@
           <h2>With responvely comes...</h2>
           <p>Create a responsive menu</p>
           <div class="footer-card">
-            <a href="projects/day-13-responsive-menu/index.html" target="_blank">Deploy</a>
-            <a href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-13-responsive-menu/" target="_blank">Repo</a>
+            <a href="projects/day-13-responsive-menu/index.html" target="_blank"
+              >Deploy</a
+            >
+            <a
+              href="https://github.com/felpfsf/21-dias-de-codigo-rocketseat/tree/master/projects/day-13-responsive-menu/"
+              target="_blank"
+              >Repo</a
+            >
           </div>
         </div>
         <div class="card">
